--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       </div>
     </main>
     <footer>
-      <a href="#" aria-label="Visite Facebook">
+      <a href="#" aria-label="Visit Facebook">
         <i class="fa-brands fa-facebook-f"></i>
       </a>
-      <a href="#" aria-lable="Visite Twitter">
+      <a href="#" aria-label="Visit Twitter">
         <i class="fa-brands fa-twitter"></i>
       </a>
-      <a href="#" aria-lable="Visite Instrgram">
+      <a href="#" aria-label="Visit Instagram">
         <i class="fa-brands fa-instagram"></i>
       </a>
     </footer>
