--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </title>
   </head>
   <body>
+    <!-- Header -->
     <header>
       <img
         src="./images/logo.svg"
@@ -34,6 +35,7 @@
         alt="logo"
       />
     </header>
+    <!-- Main -->
     <main>
       <img
         src="./images/illustration-mockups.svg"
@@ -51,6 +53,7 @@
         <button>Register</button>
       </div>
     </main>
+    <!-- Footer -->
     <footer>
       <a href="#" aria-label="Visit Facebook">
         <i class="fa-brands fa-facebook-f"></i>
