--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <img
         src="./images/logo.svg"
         id="logo"
-        height="55px"
-        width="222.24px"
+        height="55"
+        width="222"
         alt="logo"
       />
     </header>
